--- a/Simple/.project
+++ b/Simple/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Simple</name>
+	<name>tnsif_nirmalraj</name>
 	<comment></comment>
 	<projects>
 	</projects>
